--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CS 150 22.1 Lab 2 (Simple HTML Wordle)</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="start-div"></div>
-    <script src="script.js"></script>
 </body>
 </html>
